app/scss/main.scss
// **
// imports
// **

@import "variables";
@import "bourbon";
@import "neat";
@import "mixins";
@import "reset";

// **
// styles
// **

body {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  min-height: 100vh;
  font-size: 16px;
  text-align: center;
  font-family: "Roboto";
  min-width: $viewport-width + 100;
}

h1 {
  font-weight: 100;
  font-size: 65px;
  line-height: 77px;
  letter-spacing: -2px;
  color: $color-white-snow;
}

h2 {
  font-weight: 300;
  font-size: 24px;
  line-height: 28px;
  letter-spacing: -0.5px;
  color: $color-blue-mystic;
}

h3 {
  margin-bottom: 15px;

  &.dark {
    font-weight: 300;
    font-size: 46px;
    line-height: 54px;
    letter-spacing: -0.5px;
    color: $color-gray-mine;
  }

  &.light {
    font-weight: 300;
    font-size: 46px;
    line-height: 54px;
    letter-spacing: -0.5px;
    color: $color-white-snow;
  }
}

h4 {
  margin-bottom: 17px;

  &.dark {
    font-weight: 300;
    font-size: 24px;
    line-height: 28px;
    letter-spacing: -0.5px;
    color: $color-gray-chicago;
  }

  &.light {
    font-weight: 300;
    font-size: 24px;
    line-height: 28px;
    letter-spacing: -0.5px;
    color: $color-gray-chateau;
  }
}

p {
  font-weight: 300;
  font-size: 16px;
  line-height: 23px;
  color: $color-gray-mine;

  &.alt {
    font-weight: 300;
    font-size: 14px;
    line-height: 17px;
    color: $color-white-snow;
  }
}

a {
  font-weight: 500;
  font-size: 16px;
  line-height: 23px;
  color: $color-blue-hippie;

  &:hover {
    color: $color-blue-jelly;
  }
}

a.alt {
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  color: $color-gray-mercury;

  &:hover {
    color: $color-white-snow;
  }
}

.btn {
  display: inline-block;
  min-width: 173px;
  padding: 0 16px;
  border-radius: 2px;
  font-weight: 500;
  font-size: 14px;
  line-height: 49px;
  text-align: center;
}

.btn.main {
  background-color: $color-blue-hippie;
  color: $color-white-snow;

  &:hover {
    background-color: $color-blue-pelorous;
  }

  &:active {
    background-color: $color-blue-jelly;
  }
}

.btn.alt-dark {
  border: 1px solid $color-gray-chateau;
  background-color: $color-gray-desert;
  color: $color-gray-mine;

  &:hover {
    background-color: $color-white-snow;
  }

  &:active {
    background-color: $color-gray-mercury;
  }
}

.btn.alt-light {
  border: 1px solid $color-gray-stone;
  background-color: $color-gray-river;
  color: $color-white-snow;

  &:hover {
    background-color: $color-gray-shuttle;
  }

  &:active {
    background-color: $color-gray-limed;
  }
}

code {
  position: relative;
  display: inline-block;
  width: 750px;
  margin-bottom: 25px;
  padding: 20px;
  border: 1px solid $color-gray-mercury;
  border-radius: 2px;
  background-color: $color-gray-desert;
  font-family: "Roboto Mono";
  font-size: 12px;
  color: $color-gray-mine;
  line-height: 16px;
  text-align: left;

  .pbcopy {
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
    display: inline-block;
    font-family: "Roboto";
    font-size: 10px;
    line-height: 23px;
    background: $color-white-snow;
    border: 1px solid $color-gray-chateau;
    border-radius: 4px;
    padding: 0px 5px;
    cursor: pointer;

    &.zeroclipboard-is-hover {
      background: darken($color-white-snow, 3%);
    }

    &.zeroclipboard-is-active {
      background: darken($color-white-snow, 5%);
    }
  }
}

section {
  background-size: cover;
  padding: 50px 0;

  p {
    margin-bottom: 10px;
  }

  .btn {
    margin-top: 20px;
  }
}

// **
// structure
// **

.ticker {
  background: $color-blue-jelly;
  line-height: 50px;

  img,
  p,
  a {
    display: inline-block;
  }

  img {
    position: relative;
    top: 2px;
    margin-right: 10px;
    display: inline-block;
  }

  a {
    font-weight: 500;
    font-size: 14px;
    color: $color-blue-mystic;
    margin-left: 10px;

    &:hover {
      color: $color-white-snow;
    }
  }
}

.nav {
  $height: 83px;

  width: $viewport-width;
  margin: 0 auto 30px;
  text-align: left;
  position: relative;
  height: $height;
  line-height: $height;

  a {
    font-weight: 500;
    font-size: 14px;
    color: $color-blue-mystic;
    margin-right: 20px;

    &:hover {
      color: $color-white-snow;
    }

    &.nav-logo {
      margin-bottom: -1px;
      display: inline-block;
      @include retina-background(66px, 15px, "../images/logo-rtail.svg");
    }

    &.hosted {
      position: absolute;
      top: 0;
      right: 0;
      margin-right: 0;
      line-height: $height;
    }
  }
}

header {
  position: relative;
  height: 688px;
  background-image: url("../images/bg-header.jpg");

  h1 {
    margin: 0 auto 20px;
    text-align: left;
    transform: translateX(30px);
    width: 890px;
  }

  .browser {
    $height: 780px;

    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translate(-50%, 360px);
    width: 1070px;
    height: $height;
    background-image: url("../images/bg-chrome.png");
    background-position: top;
    background-size: 100%;
    padding: 87px 13px 12px;

    iframe {
      display: block;
      height: 100%;
      width: 100%;
      border-radius: 0 0 4px 4px;
    }
  }
}

.readme {
  padding-top: 392px;
}

.github {
  background-color: #404E57;
  background-image: url("../images/bg-github.jpg");
  background-size: cover;

  .github-logo {
    background-image: url("../images/icn-github.svg");
    background-size: auto 100%;
    height: 56px;
    margin-bottom: 10px;
  }
}

.contributors {
  table {
    text-align: left;
    margin: 0 auto;
    width: 675px;
    margin-bottom: 30px;

    td:first-child {
      text-align: right;
      border-right: 1px solid $color-gray-mercury;
    }

    td {
      padding: 10px 30px
    }

    .contributor-type {
      color: #ccc;
    }
  }
}

.sponsors {
  background-image: url("../images/bg-sponsor.jpg");

  .sponsors-list {
    width: 530px;
    margin: 0 auto;
    margin-top: 50px;

    a {
      $size: 92px;
      width: $size;
      height: $size;
      display: inline-block;
      background-color: $color-white-snow;
      border: 1px dotted $color-gray-chateau;
      border-radius: 10px;
      margin-right: 10px;
      background-size: 30%;
      background-image: url("../images/icn-heart.svg");

      &:nth-child(1) {
        background-image: url("../images/logo-lukibear.png");
        background-size: 50%;
      }
    }
  }
}

footer {
  line-height: 116px;
  background-color: $color-gray-river;
}

